some fancy changes

--- a/lab02/corn-bio.html
+++ b/lab02/corn-bio.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Ella Corn's Bio</h1>
+        <img src="https://scontent-lga3-1.xx.fbcdn.net/v/t1.0-9/83548011_1851803944949806_3672246851110699008_o.jpg?_nc_cat=105&_nc_sid=09cbfe&_nc_ohc=X3qdCqDZdoYAX-0kXUv&_nc_ht=scontent-lga3-1.xx&oh=c51672e6f5224c08e944b4a2227e0fe6&oe=5F72A6E2" alt="ella" style="width:360px;height:450px;">
         <p>Hi, my name is Ella and I’m a junior at Syracuse University studying <strong>Information Management and Technology</strong> in the iSchool. I intended to concentrate in information security and minor in <strong>Jewelry and Metalsmithing</strong> in the School of Art. I participated in the Girls Who Code Summer Immersion Program in 2017 where I learned:</p>
         <ul>
             <li>HTML</li>
@@ -13,7 +14,7 @@
             <li>JavaScript</li>
             <li>Python</li>
         </ul>
-        <p>We also worked with Scratch and other coding platforms. In Syracuse, I run a Girls Who Code afterschool club at an afterschool center that helps Syrian and Somalian refugee children succeed in school.</p>
+        <p>We also worked with Scratch and other coding platforms. In Syracuse, I run a Girls Who Code afterschool club at an afterschool center that helps Syrian and Somalian refugee children succeed in school. I am also a member of &Sigma;&Delta;&Tau;.</p>
         <h2>Personal Info</h2>
         <p>Outside of school I like to bake and do crafts. I enjoy comedy specials and crime shows. </p>
         <hr>
