--- a/lab06/corn-bio.html
+++ b/lab06/corn-bio.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Ella Corn - Bio</title>
-        <link rel="stylesheet`" href="style.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Ella Corn's Bio</h1>
